# gMatch

./: .gitignore  LICENSE  README.md  check_dataset.py  compile.sh  test.py  test_bitmap.py
bitmap/: candidate.cu  candidate.h  dfs_stk.h  graph.cu  graph.h  helper.h  join.h  join_bfs.cu  join_bfs_dfs.cu  main.cu  mem_pool.h  params.h
compared_system/: test_egsm.py
compared_system/BEEP/include/: CGArray.cuh  Config.h
compared_system/BEEP/src/: main.cu
compared_system/BEEP/subgraph_matching/: config.cuh  subgraph_matching.cuh
compared_system/EGSM/: CMakeLists.txt
compared_system/G2Miner/: Makefile  run_cmd.sh  test.py
compared_system/G2Miner/include/: graph.h  graph_gpu.h
compared_system/G2Miner/src/clique/: gpu_base.cu
compared_system/G2Miner/src/common/: graph.cc
compared_system/G2Miner/src/sgl/: gpu_base.cu
compared_system/G2Miner/src/triangle/: Makefile
compared_system/STMatch/: Makefile  cu_test.cu
compared_system/STMatch/src/: gpu_match.cu  graph.h  job_queue.h
compared_system/STMatch/src/config_for_ae/: fig_naive.h
compared_system/TDFS/: cu_test.cu
compared_system/TDFS/src/: callstack.h  config.h  job_queue.h  pattern.h  queue.h
compared_system/TDFS/src/Ouroboros/include/device/: MemoryInitialization.cuh
compared_systems/: test_unroll.py
compared_systems/STMatch/src/: config.h  pattern.h
compared_systems/STMatch/src/config_for_ae/: fig_local_global_unroll.h
compared_systems/TDFS/src/: gpu_match.cu  gpu_match.cuh  graph.h
compared_systems/coarse_unroll_cg/: candidate.h  computesetintersection.h  dfs_stk.h  graph.cu  graph.h  join_bfs.cu  join_bfs.h  join_bfs_dfs.cu  join_dfs.h  mem_pool.h  params.h
compared_systems/naive/: cu_test.cu
compared_systems/naive/src/: config.h  graph.h  job_queue.h  pattern.h
compared_systems/naive_cg/: CMakeLists.txt  candidate.cu  dfs_stk.h  graph_gpu.h  helper.h  join_bfs_dfs.cu  main.cu  mem_manager.h
compared_systems/unroll/: candidate.h  computesetintersection.h  dfs_stk.h  join.h  join_bfs_dfs.cu  main.cu  mem_manager.h
compared_systems/unroll_neighbor/: CMakeLists.txt  graph.cu  graph.h  helper.h  join.h  join_bfs.cu  join_bfs_dfs.cu  main.cu  params.h
compared_systems/unroll_stm/: CMakeLists.txt  candidate.cu  graph.cu  graph.h  join_bfs.cu  mem_pool.h  params.h
hash_table/: CMakeLists.txt  candidate.cu  candidate.h  cuckoo.h  dfs_stk.h  graph.cu  graph.h  helper.h  join.h  join_bfs.cu  join_bfs_dfs.cu  main.cu  mem_manager.h  params.h
neighbor/: CMakeLists.txt  candidate.cu  candidate.h  dfs_stk.h  graph.cu  graph.h  helper.h  join.h  join_bfs.cu  join_bfs_dfs.cu  join_induced.cu  join_no_filtering.cu  main.cu  mem_manager.h  mem_pool.h  params.h
patterns/: p1  p3  p4  p5  p6  p7  p8  p9
test/: expected_output.txt  test.py
test/query_graph/: Q_11.graph  Q_13.graph  Q_14.graph  Q_15.graph  Q_16.graph  Q_17.graph  Q_18.graph  Q_19.graph  Q_20.graph  Q_21.graph  Q_8.graph
work_stealing/: candidate.cu  candidate.h  dfs_stk.h  graph.h  idle_queue.h  join.h  join_bfs.cu  join_bfs_dfs.cu  main.cu  params.h
